<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

        <TextView
                android:text="Kanban"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView5" android:textSize="48sp"
                android:textStyle="bold" android:layout_marginBottom="32dp"
                app:layout_constraintBottom_toTopOf="@+id/first_name" android:layout_marginTop="20dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="169dp"
                app:layout_constraintHorizontal_bias="0.0" android:textColor="#666666"/>
        <EditText
                android:id="@+id/first_name"
                android:hint="@string/first_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:inputType="textPersonName"
                tools:ignore="Autofill" android:layout_marginTop="7dp"
                app:layout_constraintTop_toBottomOf="@+id/textView5"/>

        <EditText
                android:id="@+id/last_name"
                android:hint="@string/last_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/first_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                android:inputType="textPersonName"
                tools:ignore="Autofill"/>

        <EditText
                android:id="@+id/email"
                android:hint="@string/email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/last_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                android:inputType="textEmailAddress"
                tools:ignore="Autofill"/>

        <EditText
                android:id="@+id/username"
                android:hint="@string/username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                android:inputType="textPersonName"
                tools:ignore="Autofill"/>

        <EditText
                android:id="@+id/password"
                android:hint="@string/password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/username"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                android:inputType="textPassword"
                tools:ignore="Autofill"/>

        <Button
                android:id="@+id/create_account"
                android:text="@string/create_account"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:textColor="@android:color/white" android:background="#666666"/>

    </android.support.constraint.ConstraintLayout>

</ScrollView>